# ESP32-RSD

./: Makefile  README.md  freewifi_info  plot_rsd.py  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  freewifi_req  freewifi_req.c  freewifi_request.c  main.c  main.h  nas_queue.c  nas_queue.h  nas_task.c  nas_task.h  parser_func.c  reboot_task.c  reboot_task.h  sound_task.c  sound_task.h  time_task.c  time_task.h  wifi_connect.c
main/include/: freewifi_req.h  main.h  parser_func.h  sound_task.h  time_task.h  wifi_connect.h
main/tft/: tftspi.c  tftspi.h
rsd_monitor/: README.md  pubspec.yaml
rsd_monitor/android/app/: build.gradle
rsd_monitor/android/app/src/debug/: AndroidManifest.xml
rsd_monitor/android/app/src/main/: AndroidManifest.xml
rsd_monitor/android/app/src/main/kotlin/com/example/rsd_monitor/: MainActivity.kt
rsd_monitor/ios/Runner/: Info.plist
rsd_monitor/ios/Runner.xcodeproj/: project.pbxproj
rsd_monitor/lib/: Base.dart  BlocBase.dart  ChartPresenter.dart  ChartPresenterImpl.dart  RSDRepository.dart  main.dart
rsd_monitor/lib/dao/: NASEntry.dart
rsd_monitor/test/: widget_test.dart
