idf_component_register(SRCS "wifi_connect.c" "freewifi_req.c" "sound_task.c" "time_task.c" "nas_task.c" "nas_queue.c" "reboot_task.c" "main.c" 
						"tft/comic24.c" "tft/tft.c" "tft/tftspi.c" "tft/tooney32.c" "tft/def_small.c" "tft/DefaultFont.c" "tft/minya24.c" "parser_func.c"
                    INCLUDE_DIRS "." "./tft/" "./include/")
